--- a/angular.json
+++ b/angular.json
@@ -13,7 +13,8 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/Personal-Website",
+            "outputPath": "docs",
+            "baseHref": "/Personal-Website/",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
